--- a/barcode/package.json
+++ b/barcode/package.json
@@ -1,11 +1,13 @@
 {
   "name": "barcode",
   "version": "0.1.0",
+  "homepage": "https://galya-cmd.github.io/Barcode-Ink/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,4 +40,6 @@
       "last 1 safari version"
     ]
   }
+  
+  
 }
